fixes for 2nd review
Signed-off-by: Laurent ARNAL <laurent@clae.net>